增加了画笔颜色和几个图形，修改了一个会导致溢出的BUG